# dsbaseline

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json
.github/ISSUE_TEMPLATE/: cookiecutter-issue.yml
.github/workflows/: setup-repository.yml
docs/: mkdocs.yml
docs/docs/: index.md
tests/: conftest.py  test_creation.py
{{cookiecutter.repo_name}}/: .darglint  .flake8  .gitignore  Makefile  README.md  liccheck.ini  noxfile.py  noxfile.py.bak  poetry.toml  pyproject.toml  setup.py  test_environment.py
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: test_creation.py  test_environment.py
{{cookiecutter.repo_name}}/{{ cookiecutter.repo_name }}/: noxfile.py  pyproject.toml
