[tool.poetry]
name = "dsbaseline"
version = "0.1.0"
description = ""
authors = ["mraarone <mraarone@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
python-dotenv = "^0.20.0"
Sphinx = "^5.1.1"
coverage = "^6.4.4"
pylint = "^2.15.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"
setuptools = "^65.3.0"

[tool.poetry.dev-dependencies]
nox = "^2022.8.7"
black = "^22.6.0"
mypy = "<=0.971"
darglint = "^1.8.1"
isort = "^5.10.1"
coverage = "^6.4.4"
pylint = "^2.15.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
