[tool.poetry]
name = "builder"
version = "0.1.0"
description = ""
authors = ["mraarone <mraarone@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
click = "^8.1.3"
flake8-bandit = "^3.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
bandit = "^1.7.4"
pylint = "^2.15.0"
nox = "^2022.8.7"
mypy = "<=0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
